--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express": "^4.19.2",
         "morgan": "^1.10.0",
         "nodemon": "^3.1.4",
+        "oracledb": "^6.7.0",
         "pg": "^8.12.0"
     }
 }
